fixed logo in footer on mobile version:

--- a/_global.scss
+++ b/_global.scss
@@ -23,7 +23,7 @@
   }
   
   .logo-img{  
-    width: 10%;
+    width: 25%;
     color:#FFFFFF;
     
   }
@@ -51,6 +51,6 @@
 
         .logo-img{
           padding-top: 15px;
-          width: 15%;
+          width: 20%;
         }
   }
