--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ footer a {
 }
 
 .logo-img {
-  width: 10%;
+  width: 25%;
   color: #FFFFFF;
 }
 
@@ -44,7 +44,7 @@ footer a {
   }
   .logo-img {
     padding-top: 15px;
-    width: 15%;
+    width: 20%;
   }
 }
 .fa-arrow-left {
